@@ -3,7 +3,15 @@ Section: utils
 Priority: extra
 Maintainer: Debian Install System Team <debian-boot@lists.debian.org>
 Uploaders: Robert Millan <rmh@debian.org>
-Build-Depends: cdbs, debhelper (>= 5), nsis (>= 2.25-1), mingw32, gettext, grub-pc (>= 1.95+20070828-1), grubutil-win32, locales-all
+Build-Depends:
+ cdbs,
+ debhelper (>= 5),
+ nsis (>= 2.25-1),
+ mingw32,
+ gettext,
+ grub-pc (>= 1.95+20071101-1),
+ grubutil-win32,
+ locales-all
 Standards-Version: 3.7.2
 
 Package: win32-loader
