@@ -11,8 +11,10 @@ win32-loader (0.6.0~pre4) UNRELEASED; urgency=low
   * Fix dialog.nsh generation for languages whose names have more than
     one word (welcome, Norwegian Bokmål).
   * Clarify translator note for "windows-1252" string.
+  * Add "biosdisk" and "gpt" GRUB modules.  Build-Depend on
+    grub-pc (>= 1.95+20071101-1).
 
- -- Robert Millan <rmh@aybabtu.com>  Tue, 11 Dec 2007 08:55:40 +0100
+ -- Robert Millan <rmh@aybabtu.com>  Tue, 25 Dec 2007 11:03:38 +0100
 
 win32-loader (0.6.0~pre3) unstable; urgency=low
 
